--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Lexi Bobb</h1>
-						<p>Just another free, fully responsive site template<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p>Welcome! Glad you're here, feel free to take a look around to learn about me! <br />
+							If you have any question, click contact me to find out how you can reach me!
+						<!-- built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#first">My Experience</a></li>
+							<li><a href="#second">My Skills</a></li>
+							<li><a href="#cta">Contact Info</a></li>
 						</ul>
 					</nav>
 
@@ -56,7 +57,7 @@
 								</div>
 							</section>
 
-						<!-- First Section -->
+						<!-- My Experience -->
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>Magna veroeros</h2>
