--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/Lexi.png" alt="" /></span>
+						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Lexi Bobb</h1>
 						<p>Welcome! Glad you're here, feel free to take a look around to learn about me! <br />
 							If you have any question, click contact me to find out how you can reach me!
@@ -54,7 +54,7 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/Lexi.png" alt="" /></span>
 								</div>
 							</section>
 
