--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/Lexi.png" alt="" /></span>
+									<span class="image"><img src="images/Lexi.jpg" alt="" /></span>
 								</div>
 							</section>
 
