--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">My Experience</a></li>
+							<li><a href="#first">Work Experience</a></li>
 							<li><a href="#second">My Skills</a></li>
 							<li><a href="#cta">Contact Info</a></li>
 						</ul>
@@ -61,21 +61,21 @@
 						<!-- My Experience -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Work Experience</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
+										<span class="image"><img src="images/cisco1.png" alt="" /></span>
 										<h3>Cisco - Project Specialist Intern</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="image"><img src="images/pepsi.png" alt="" /></span>
 										<h3>Pepsico - Project Management Intern</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+										<span class="image"><img src="images/geappliances.png" alt="" /></span>
 										<h3>GE Appliances - New Product Introduction Sourcing Co-op</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
