--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="image"><img src="images/cisco1.png" alt="" /></span>
+										<span class="logo"><img src="images/cisco1.png" alt="" /></span>
 										<h3>Cisco - Project Specialist Intern</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<span class="image"><img src="images/pepsi.png" alt="" /></span>
+										<span class="logo"><img src="images/pepsi.png" alt="" /></span>
 										<h3>Pepsico - Project Management Intern</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<span class="image"><img src="images/geappliances.png" alt="" /></span>
+										<span class="logo"><img src="images/geappliances.png" alt="" /></span>
 										<h3>GE Appliances - New Product Introduction Sourcing Co-op</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
