--- a/index.html
+++ b/index.html
@@ -67,17 +67,29 @@
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Cisco - Project Specialist Intern</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p> ● Led a project to enhance data organization and efficiency for a team of 600 people. Project included using Python and Excel to reformat
+										multiple documents. <br />
+										● Developed a method of translating data into a relational database using SQL to enhance product lifecycle models, offer alternate solutions
+										for unreliable parts, and provide visibility of closed-looped exceptions for parts within assemblies. The output of this project will be used
+										on every sustaining and new product introduced within Cisco to improve product resiliency.<br />
+										● Program managed a cross functional team to solution a highly visible case that involved utilizing AI and machine learning techniques for
+										outlier detection, achieving improved accuracy with the implementation of Naive models. With my leadership, the team received
+										recognition from cross functional Supply Chain leadership with plan to implement the solution into core Cisco processes</p>
 									</li>
 									<li>
 										<span class="icon solid major style3 fa-code"></span>
 										<h3>Pepsico - Project Management Intern</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>● Responsible for scheduling and managing deadlines for projects in the quality department <br />
+										● Collaborated with supervisors and managers to identify organizational areas of improvement within the plant and implemented
+										improvements to advance plant efficiency<br />
+										● Improved onboarding process efficiency by writing standard work and creating macros</p>
 									</li>
 									<li>
 										<span class="icon solid major style5 fa-code"></span>
 										<h3>GE Appliances - New Product Introduction Sourcing Co-op</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>● Identify new suppliers through data analysis and requests for proposals and quotes <br />
+										● Managed RFQs (request for quotes) for the 2023 new product introduction program <br />
+										● Analyzed bill of materials costs, capacity data, part forecasting, and part design approval to recommend eligible suppliers for new product</p>
 									</li>
 								</ul>
 								<footer class="major">
@@ -90,33 +102,32 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>My Skills</h2>
+									<p>Here are various programming languages as well as technology platforms I have experience woking with!</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
+										<strong>C++</strong> Etiam
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+										<strong>Python</strong> Magna
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
+										<strong>Microsoft Excel</strong> Tempus
 									</li>
 									<li class="style4">
 										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+										<strong>SQL</strong> Aliquam
 									</li>
 									<li class="style5">
 										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
+										<strong>Java</strong> Nullam
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p class="content">Throughout college and my three internship experiences, I have used these different technologies on different projects to challenge and extend my programming skills and improve my data analysis knowledge.</p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
@@ -127,7 +138,7 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
+									<h2>Contact Me</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
@@ -144,8 +155,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Specific Info</h2>
+							<p>The best way to reach me is through phone call or email, but you can also reach me on LinkedIn at lexi-bobb!</p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
@@ -154,11 +165,11 @@
 							<h2>Etiam feugiat</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+								<dd>437 Cardinal Ave, FWB FL, 32548</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>(850) 716-7427</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="#">lcbobb02@yahoo.com</a></dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
