--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Contact Me</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>Please use the information listed below to contact me about any opportunities!</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
@@ -155,14 +154,14 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Specific Info</h2>
-							<p>The best way to reach me is through phone call or email, but you can also reach me on LinkedIn at lexi-bobb!</p>
+							<h2>LinkedIn</h2>
+							<p>The best way to reach me is through phone call or email, but you can also reach me on LinkedIn <a href="http://linkedin.com/in/lexi-bobb-799262229">here</a>!</p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Specific Info</h2>
 							<dl class="alt">
 								<dt>Address</dt>
 								<dd>437 Cardinal Ave, FWB FL, 32548</dd>
