--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Lexi Bobb</h1>
 						<p>Welcome! Glad you're here, feel free to take a look around to learn about me! <br />
-							If you have any question, click contact me to find out how you can reach me!
+							This website is still in progress but atay tuned to see a more updated version of it soon!
 						<!-- built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 					</header>
 
@@ -108,23 +108,23 @@
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
-										<strong>C++</strong> Etiam
+										<strong>C++</strong> 
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open"></span>
-										<strong>Python</strong> Magna
+										<strong>Python</strong>
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-signal"></span>
-										<strong>Microsoft Excel</strong> Tempus
+										<strong>Microsoft Excel</strong> 
 									</li>
 									<li class="style4">
 										<span class="icon solid fa-laptop"></span>
-										<strong>SQL</strong> Aliquam
+										<strong>SQL</strong> 
 									</li>
 									<li class="style5">
 										<span class="icon fa-gem"></span>
-										<strong>Java</strong> Nullam
+										<strong>Java</strong>
 									</li>
 								</ul>
 								<p class="content">Throughout college and my three internship experiences, I have used these different technologies on different projects to challenge and extend my programming skills and improve my data analysis knowledge.</p>
